# poetry_template_2

./: .editorconfig  .flake8  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-links.yml  ci.yml  pre-commit_autoupdate.yml
myproject/: __init__.py
tests/: __init__.py  test_myproject.py
